# Algorithms

./: .gitignore  CMakeLists.txt
01-Arrays/: 1-array.c  2-pointer-to-structure.c  3-call-by-value-to-structure.c  4-call-by-pointer-to-structure.c  5-templeate-class.cpp
02-Sorting/: 1-insertion-sort.c  2-selection-sort.c  3-bubble-sort.c
03-Searching/: 1-binary-search.c
4-ArrayLists/: 2-arraylist.cpp  ArrayList01.java  Book.java  BookList.java
5-Array Practice/: 1-initialization.cpp  2-power-of-2.cpp  3-swap-alternate-elements.cpp  4-reverse-array.cpp  5-find-unique.cpp
